2004-09-10  Juergen Reuter  <reuter@ipd.uka.de>

	* (many files): removed most occurrences of underscore ("_")
	from font characters; made font character naming more
	consistent

	* input/test/gregorian-scripts.ly: fixed another victim of grand
	replacement operations

2004-09-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/changing-defaults.itely (Paper size): doc
	landscape
	

	* scm/framework-ps.scm (eps-header): bugfixes. 

	* scm/titling.scm (default-score-title): remove opus from the
	\score title.

2004-09-08  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scripts/convert-ly.py (program_name): changed to sys.argv[0]

	* scripts/abc2ly.py (program_name): changed to sys.argv[0]

	* scripts/etf2ly.py (program_name): changed to sys.argv[0]

	* scripts/lilypond-book.py (program_name): changed to sys.argv[0]

	* scripts/lilypond-latex.py (program_name): changed to sys.argv[0]

	* scripts/midi2ly.py (program_name): changed to sys.argv[0]

	* scripts/mup2ly.py (program_name): changed to sys.argv[0]

	* scripts/ps2png.py (program_name): changed to sys.argv[0]

2004-09-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/pangofc-afm-decoder.cc (pango_fc_afm_get_glyph): Increment
	character position.  Huh?

	* scm/output-gnome.scm (placebox): Shield affine-relative.

	* buildscripts/guile-gnome.sh: Update.  Do not use GUILE CVS,
	cater for system's pango 1.5.1.

	* input/regression/new-slur.ly: Add ugly slur from scsii-sarabande.

	* scm/slur.scm: Tweak.

2004-09-08  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/{first couple of chapters}: more editing.

2004-09-07  Graham Percival  <gperlist@shaw.ca>

	* Documentation/topdocs/AUTHORS.texi, THANKS: add/modify my name and summary.

	* Documentation/user/{first couple of chapters}: the big "Graham's moved to
	a new city, his friends haven't arrived, and he has no internet access" patch.
	Numerous editorial and stylistic changes to the manual.

2004-09-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>
