@@ -7,6 +7,9 @@
 	* input/test/gregorian-scripts.ly: fixed another victim of grand
 	replacement operations
 
+	* lily/vaticana-ligature-engraver.cc: caught some more "_"
+	inconsistencies
+
 2004-09-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* Documentation/user/changing-defaults.itely (Paper size): doc
